Fix FF & Safari bug with right-aligned "Save Page" button.
[#67753442]
https://www.pivotaltracker.com/story/show/67753442

--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -270,14 +270,14 @@ a.button {
 		}
 
 .top-actions {
-  float: right;
+  width: 100%;
   margin-bottom: 12px;
-  clear: both;
+  text-align: right;
 }
 .bottom-actions {
-  float: right;
+  width: 100%;
   margin-bottom: 12px;
-  clear: both;
+  text-align: right;
 }
 #page_pane_ordering {
   clear: both;
